--- a/Index.html
+++ b/Index.html
@@ -1,1 +1,24 @@
+<html>
+<body>
+
 <img src="Picsart_25-08-06_14-34-25-281.jpg">
+
+<div class="buttons">
+<h2><a href="Index">Home</h2></a> <h2><a href="films">Films</h2></a> <h2><a href="blog">Blog</h2></a> <h2><a href="">Guest Book</h2></a>
+</div>
+<P>Welcome to the Films of Micrograve, founded by Aaden West and Ian West.</P>
+
+
+
+
+
+
+
+
+
+
+
+
+
+</body>
+</html>
