--- a/Index.html
+++ b/Index.html
@@ -4,7 +4,7 @@
 <img src="Picsart_25-08-06_14-34-25-281.jpg">
 
 <div class="buttons">
-<h2><a href="Index">Home</a> <a href="films">Films</a> <a href="blog">Blog</a> <a href="">Guest Book</h2></a></h2>
+<h2><a href="Index">Home</a></h2> <h2><a href="films">Films</a></h2> <h2><a href="blog">Blog</a></h2> <h2><a href="">Guest Book</h2></a></h2>
 </div>
 <P>Welcome to the Films of Micrograve, founded by Aaden West and Ian West.</P>
 
@@ -16,7 +16,14 @@
 
 
 
-
+<style>
+  .buttons {
+  display: inline-block; 
+  margin: 5px;
+  padding: 10px 20px;
+  background-color: ##0aa802;
+  border: white solid 4px;
+}
 
 
 
