--- a/Index.html
+++ b/Index.html
@@ -17,6 +17,14 @@
 
 
 <style>
+  
+  body {
+color: white;
+    background-image: url();
+      background:purple
+      font: Brush Script MT;
+  }
+  
   .buttons {
   display: inline-block; 
   margin: 5px;
