--- a/oldfilms.html
+++ b/oldfilms.html
@@ -62,16 +62,26 @@
   text-align: center;
    text-shadow: 2px 2px black;
   }
-  
-  .buttons {
+   .buttons {
         
         display: flex;
         gap: 10px; 
         justify-content: center;
         border:green, 10px, solid;
+        margin-bottom: 50px;
   }
+  
+  hr {
+      border: none; /* Remove default border */
+      border-top: 2px solid #ccc; /* Add a solid top border as the line */
+      margin: 20px 0; /* Add some vertical spacing */
+      width: 80%; /* Set a width */
+      margin-left: auto; /* Center the line */
+      margin-right: auto;
+       color: #74f779;
+    }
     .old {
-
+margin-bottom: 300px;
     }
 </body>
 </html>
