--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   </div>
    <div class="haha">
   <h2>Here you will find...</h2>
-  <h2>Short Films, Skits, mabye Vlogs and other stuff.</h2> 
+  <h2>Short Films, Skits and other stuff.</h2> 
   </div>
   
   <div class="no">
