--- a/index.html
+++ b/index.html
@@ -12,7 +12,10 @@
    <div class="haha">
   <h2>Here you will find...</h2>
   <h2>Short Films, Skits and other stuff.</h2> 
-   <h1>Email: Microgravefilms@gmail.com</h1>
+    </div>
+    
+     <div class="haha">
+     <h1>Email: Microgravefilms@gmail.com</h1>
    </div>
     
   
